--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-scp": "^1.0.12",
+    "ember-cli-favicon": "^2.2.0",
     "ember-cli-htmlbars": "^4.2.3",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sass": "^10.0.1",
